--- a/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Rexana.html
+++ b/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Rexana.html
@@ -3,11 +3,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
-     <link rel="stylesheet" type="text/css" href="{% static 'LMI_NLP/bootstrap.css' %}"> 
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" type="text/css" href="{% static 'LMI_NLP/bootstrap.css' %}"> 
     <link rel="stylesheet" type="text/css" href="{% static 'LMI_NLP/Rex.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -74,7 +76,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="rex">
-                                {% load static %}  <img src="{% static "LMI_NLP/images/rex.svg"%}" alt="" class="img-fluid"/>
+                                {% load static %}  <img src="{% static 'LMI_NLP/images/rex.svg'%}" alt="" class="img-fluid"/>
                             </div>
 
                         </div>
@@ -179,7 +181,5 @@
 <div class="container-fluid">
    
 </div>
-    
-    
-</body>
+
 </html>
