--- a/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Rexana.html
+++ b/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Rexana.html
@@ -57,14 +57,17 @@
                         <div class="col-12">
                             <div class = "CH1">
                                 Rexana est une intelligence artificielle
-                                qui saura repondre a vos questions,
-                                en faisant, comme toutes personne humaine ferait
-                                quand elle a une question: chercher dans Wikipedia
+                                qui saura répondre à vos questions,
+                                en faisant, comme toute personne humaine ferait
+                                quand elle a une question: <br>
+                                chercher dans WIKIPEDIA
                             </div>
                         </div>
 
                         <div class="col-12">
-                            <input class="bt" type="button" value="posez votre question !">
+                            <form action="Execution.html">
+                                <input class ="bt" type="submit" value="Posez votre question" />
+                            </form>
                         </div>
 
                     </div>
@@ -121,9 +124,9 @@
             <div class="col-6 py-4">
                 <div class="content2">
                    Rexana est une intelligence artificielle qui utilise un modèle de réseaux de neurones entrainé disponible sur internet, 
-                   ce dernier s'apelle <span style="font-weight: bold; color : #9D7FC6;">Piaf</span>, ce dernier est très performant. <br>
+                   ce dernier s'appelle <span style="font-weight: bold; color : #9D7FC6;">Piaf</span>, ce dernier est très performant. <br>
                    pour trouver les réponses aux questions posées, elle explore la base de données de WIKIPEDIA. <br>
-                   Les etapes que suit Rexana sont :
+                   Les étapes que suit Rexana sont :
                 </div> 
             </div>
         </div>
@@ -140,7 +143,7 @@
                             <div class="content3">
                                 <span style="font-weight: bold; color : #9D7FC6;">Analyse syntaxique et sémantique de la phrase</span> <br>
                                 en délimitant les mots et la ponctuation; Rexana comprend qu'il y a
-                                des espaces entre les mots, ceci servira  à déterminer et à comprendre certains mots clés.
+                                des espaces entre les mots, ceci servira à déterminer et à comprendre certains mots clés.
                                
                             </div> 
                         </div>
@@ -154,8 +157,8 @@
                     <div class="row justify-content-center">
                         <div class="col-10 text-center">
                             <div class="content4">
-                                <span style="font-weight: bold; color : #9D7FC6;">détermination du théme</span> <br>
-                                grâce à l'Analyse sémantique et syntaxique, il est en effet possible de trouver le théme qu'englobe la question, qu'on explorera par la suite pour trouver la réponse
+                                <span style="font-weight: bold; color : #9D7FC6;">Détermination du théme</span> <br>
+                                grâce à l'analyse sémantique et syntaxique, il est en effet possible de trouver le théme qu'englobe la question, qu'on explorera par la suite pour trouver la réponse
                                 à la question
                     
                             </div> 
@@ -178,8 +181,24 @@
             </div>
 
           
-<div class="container-fluid">
-   
-</div>
+            <div class="container-fluid">
+                <footer>
+                    <div class="row" id="footer-bg">
+                        <div class="col-2 pt-2 text-center py-4" style="background-color: #1563A5;">
+                            <h2 class="logo" style="background-color: #1563A5;">Rexana</h2>
+                        </div>
+        
+                        <div class="col-4" style="background-color: #1563A5;">
+        
+                        </div>
+        
+                        <div class="col-auto text-center"  style="background-color: #1563A5;" >
+                                Tout droit réservé à l'université Libre de Bruxelles dans le cardre d'un projet trandisciplinaire.
+                                les illusrations utilisées sont libres de droits.
+                        </div>
+                    </div>
+                </footer>
+               
+            </div>
 
 </html>
