--- a/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Execution.html
+++ b/Wiki_QA_System-master/mysite/LMI_NLP/templates/LMI_NLP/Execution.html
@@ -2,6 +2,9 @@
 
 <head>
 	<link rel="stylesheet" href="{% static 'LMI_NLP/exec.css' %}">
+	 <link rel="preconnect" href="https://fonts.googleapis.com">
+    	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 	<title>OK</title>
 	<meta name="viewport" content="width=device-width">
 </head>
